# TREC

./: .gitignore  README.md
191121-232827-uno/src/: netFT_to_arduino.ino
SOEM/: a.out  check.cpp
SOEM/soem/: ethercatconfig.c
SOEM/test/linux/simple_test/: CMakeLists.txt  simple_test.c  simple_test2.c  simple_test3.c
TestEasyCAT/: TestEasyCAT.ino
easyCAT_check/src/: EasyCAT.h  main.cpp  profile.h
netFT_to_arduino/: netFT_to_arduino.ino  util.h
shield_both_mounted/lib/CAN-BUS_Shield/: mcp_can.h
shield_both_mounted/src/: main.cpp  profile.h  profile2.h  profile3.h  util.h
